--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -101,6 +101,14 @@
     font-size: 16px!important;
 }
 
+.fs-100p {
+    font-size: 100%;
+}
+
+.bd-none {
+    border: none;
+}
+
 .lh-13 {
     line-height: 1.3rem;
 
