--- a/views/topics/followers.ejs
+++ b/views/topics/followers.ejs
@@ -24,8 +24,8 @@
                                                     <!--<p></p>-->
 
                                                     <div class="grid mza w-25 pb-14">
-                                                        <p><%= results[2][0].imagescount %> Photos</p>
-                                                        <a class="brown" href="/topics/<%= results[0][0].id %>/followers"><p><%= results[3][0].followerscount %> Followers</p></a>
+                                                        <a class="brown" href="/topics/<%= results[0][0].id %>"><p><span id="postscount"><%= results[2][0].postscount %></span> Posts</p></a>
+                                                        <a class="brown" href="/topics/<%= results[0][0].id %>/followers"><p><span id="topicfollowerscount"><%= results[3][0].followerscount %></span> Followers</p></a>
                                                     </div>
 
 
@@ -42,18 +42,24 @@
                             </div>
                         </div>
 
-                        <div id="count" class="et_pb_section et_pb_section_1 et_section_specialty pt-none" data-count=<%= results[3][0].followerscount %>>
-                            <div class="et_pb_row">
-                                <div id="gallery" class="gallery-s">
-                                    <% for(var i=0; i < results[1].length; i++) { %>
-                                    <div class="gallery-item">
-                                        <a class="gallery-item-a mr-none" href="/users/<%= results[1][i].id %>"><img class="gallery-item-img" src="<%= results[1][i].imageurl %>" alt="">
-                                        </a>
+                        <div class="et_pb_section et_pb_section_1 et_section_specialty pt-none">
+                            <div class="et_pb_row" id="container">
+                                <% for(var i=0; i < results[1].length; i++) { %>
+                                <div class="et_pb_module et_pb_blurb et_pb_blurb_2 et_pb_bg_layout_light  et_pb_text_align_left  et_pb_blurb_position_left mb-30 box-shadow-none container-item" style="">
+                                    <div class="et_pb_blurb_content">
+
+                                        <div class="et_pb_blurb_container">
+                                            <a href="/users/<%= results[1][i].id %>"><h4 class="et_pb_module_header"><%= results[1][i].username %></h4></a>
+                                            <div class="et_pb_blurb_description">
+                                                <img class="width-100" src="<%= results[1][i].imageurl %>">
+                                            </div>
+                                        </div>
                                     </div>
-                                    <% } %>
                                 </div>
-                                <div id="loadMore">
-                                </div>
+                                <% } %>
+
+                            </div>
+                            <div id="loadMore">
                             </div>
                         </div>
 
