--- a/views/topics/show.ejs
+++ b/views/topics/show.ejs
@@ -24,7 +24,7 @@
                                                         <!--<p></p>-->
 
                                                         <div class="grid mza w-25 pb-14">
-                                                            <p><%= results[2][0].imagescount %> Photos</p>
+                                                            <a class="brown" href="/topics/<%= results[0][0].id %>"><p><span id="postscount"><%= results[2][0].postscount %></span> Posts</p></a>
                                                             <a class="brown" href="/topics/<%= results[0][0].id %>/followers"><p><span id="topicfollowerscount"><%= results[3][0].followerscount %></span> Followers</p></a>
                                                         </div>
 
@@ -35,7 +35,7 @@
                                                     <% if (req.isAuthenticated()) { %>
                                                     <div class="et_pb_button_module_wrapper et_pb_button_2_wrapper et_pb_button_alignment_center et_pb_module flex justify">
                                                             <button id="followunfollow" class="submit-button">
-                                                                <% if (status === 0) { %>
+                                                                <% if (result[0].status === 0) { %>
                                                                 Follow
                                                                 <% } else { %>
                                                                 Unfollow
@@ -54,18 +54,26 @@
                         </div>
 
 
-                        <div id="count" class="et_pb_section et_pb_section_1 et_section_specialty pt-none" data-count=<%= results[2][0].imagescount %>>
-                            <div class="et_pb_row">
-                                <div id="gallery" class="gallery">
-                                    <% for(var i=0; i < results[1].length; i++) { %>
-                                    <div class="gallery-item">
-                                        <a class="gallery-item-a mr-none" href="/images/<%= results[1][i].id %>"><img class="gallery-item-img" src="<%= results[1][i].imageurl %>" alt="">
-                                        </a>
+                        <div class="et_pb_section et_pb_section_1 et_section_specialty pt-none">
+                            <div class="et_pb_row" id="container">
+                                <% for(var i=0; i < results[1].length; i++) { %>
+                                <div class="et_pb_module et_pb_blurb et_pb_blurb_2 et_pb_bg_layout_light  et_pb_text_align_left  et_pb_blurb_position_left mb-30 box-shadow-none container-item" style="">
+                                    <div class="et_pb_blurb_content">
+
+                                        <div class="et_pb_blurb_container">
+                                            <a href="/posts/<%= results[1][i].id %>"><h4 class="et_pb_module_header"><%= results[1][i].name %></h4></a>
+                                            <div class="et_pb_blurb_description">
+                                                <p><%= results[1][i].description %></p>
+                                                <img class=" "src="<%= results[1][i].imageurl %>">
+                                                <p><strong><%= moment(results[1][i].datecreated).format('LLL') %></strong></p>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <% } %>
                                 </div>
-                                <div id="loadMore">
-                                </div>
+                                <% } %>
+
+                            </div>
+                            <div id="loadMore">
                             </div>
                         </div>
 
@@ -78,7 +86,7 @@
 
 </div>
 
-<script src="/javascripts/topicloadmoreimages.js"></script>
+<script src="/javascripts/topicloadmoreposts.js"></script>
 <% if (req.isAuthenticated()) { %>
 <script src="/javascripts/topicfollowunfollow.js"></script>
 <% } %>
