--- a/views/users/upvotes.ejs
+++ b/views/users/upvotes.ejs
@@ -28,7 +28,7 @@
                                                     </div>
                                                     <div class="grid mza w-25 pb-14">
                                                         <a class="brown" href="/users/<%= results[0][0].id %>/comments"><p><%= results[4][0].commentscount %> Comments</p></a>
-                                                        <a class="brown" href="/users/<%= results[0][0].id %>/upvotes"><p><span id="upvotescount"><%= results[5][0].upvotescount %></span> Upvotes</p></a>
+                                                        <a class="brown" href="/users/<%= results[0][0].id %>/upvotes"><p><span id="upvotescount"><%= results[5][0].upvotescount %></span> Likes</p></a>
                                                     </div>
                                                     <p class="mza w-60"><%= results[0][0].description %></p>
                                                 </div>
